--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <button
             id="custom-button"
             class="btn btn-outline-secondary mt-3"
-            title="Customize your Quizer"
+            title="Customize your Quizzer"
           >
             <img src="imgs/slider.png" style="width: 20px" />
           </button>
